--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^3.2.13",
-    "vue-eslint-parser": "^9.1.0"
+    "vue-eslint-parser": "^9.1.0",
+    "vue-meta-info": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
